--- a/ejemplo_vuetify/index.html
+++ b/ejemplo_vuetify/index.html
@@ -3,14 +3,15 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" href="/430.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Welcome to Vuetify 3</title>
+  <title>Hola</title>
 </head>
 
 <body>
   <div id="app"></div>
+  <script src="https://accounts.google.com/gsi/client" async></script>
   <script type="module" src="/src/main.js"></script>
 </body>
 
-</html>
+  </html>
